[#26] feat: 음수 방향(백도) 움직임 충돌 구현